fix(feedback): improve the UI

--- a/src/app/_variable.scss
+++ b/src/app/_variable.scss
@@ -7,6 +7,7 @@ $disabledColor: #d1d1d1;
 $inactive: #878d91;
 $active: #1b1d1e;
 $green: #2cc34c;
+$blue: #39a4e2;
 $txt: #858e93;
 
 /* image path */
