--- a/src/app/components/footer/tpl.html
+++ b/src/app/components/footer/tpl.html
@@ -14,19 +14,19 @@
     <div class="col-sm-3 links">
       <div class="sectionWrapper">
         <div class="sectionHead">CONTACT</div>
-        <div>Customer Support</div>
-        <div>Places We Serve</div>
-        <div>About Us</div>
-        <div>Join Us</div>
+        <div ng-click="$ctrl.customer()">Customer Support</div>
+        <div ng-click="$ctrl.places()">Places We Serve</div>
+        <div ng-click="$ctrl.about()">About Us</div>
+        <div ng-click="$ctrl.join()">Join Us</div>
       </div>
     </div>
     <div class="col-sm-3 links">
       <div class="sectionWrapper">
         <div class="sectionHead">LEGAL</div>
-        <div>Privacy Policy</div>
-        <div>Terms & Conditions</div>
-        <div>Quality Control</div>
-        <div>FAQs</div>
+        <div ng-click="$ctrl.privacy()">Privacy Policy</div>
+        <div ng-click="$ctrl.terms()">Terms & Conditions</div>
+        <div ng-click="$ctrl.quality()">Quality Control</div>
+        <div ng-click="$ctrl.faq()">FAQs</div>
       </div>
     </div>
     <div class="col-sm-3 links">
