--- a/src/app/pages/login/signin/tpl.html
+++ b/src/app/pages/login/signin/tpl.html
@@ -3,7 +3,7 @@
     <div class="auth">
       <form name="login_form" novalidate class="box css-form" ng-submit="$ctrl.fnLogin()">
         <h3>Login</h3>
-        <div class="title"></div>
+        <!-- <div class="title"></div> -->
         <div class="boxWrapper">
           <div>
             <input required type="email" ng-model="$ctrl.user.email" placeholder="email"></input>
