--- a/src/app/pages/login/signup/tpl.html
+++ b/src/app/pages/login/signup/tpl.html
@@ -3,7 +3,7 @@
     <div class="auth">
       <div class="box">
         <h3>Signup</h3>
-        <div class="title"></div>
+        <!-- <div class="title"></div> -->
         <div class="boxWrapper">
           <form ng-if="!$ctrl.isOTPStage" name="signup_form" novalidate class="signup css-form" ng-submit="$ctrl.fnSignup()">
             <div>
