--- a/src/app/pages/results/tpl.html
+++ b/src/app/pages/results/tpl.html
@@ -34,11 +34,11 @@
           <div class="mealInfo">
             <h4 bo-text="item.name"></h4>
             <div class="meal_info" layout="row">
-              <div class="name" flex="35"><i class="material-icons">location_on</i>name</div>
+              <div class="name" flex="25"><i class="material-icons">location_on</i>name</div>
               <div class="sl" flex="45"><span class="sl">SL: <span uib-rating ng-model="$ctrl.rate" max="$ctrl.max" read-only="$ctrl.isReadonly" state-on="'custom-on'" state-off="'custom-off'" titles="['one','two','three']" aria-labelledby="default-rating"></span>
               </div>
-              <div class="vegan" flex="20" bo-hide="item.nonVeg">VEGAN</div>
-              <div class="vegan none" flex="20" bo-show="item.nonVeg">NON-VEGAN</div>
+              <div class="vegan" flex="30" bo-hide="item.nonVeg">VEGAN</div>
+              <div class="vegan none" flex="30" bo-show="item.nonVeg">NON-VEGAN</div>
             </div>
           </div>
           <div class="chefInfo">
@@ -56,7 +56,7 @@
           <div class="price">
             <div bo-text="item.oldPrice"></div>
             <div bo-text="'$' + item.price"></div>
-            <button class="btn btn-default"  ng-hide="$ctrl.getCurrentQty(item) === 0"><span class="minus" ng-click="$ctrl.decreaseQuantity(item)">- </span><span>{{$ctrl.getCurrentQty(item)}}</span><span class="plus" ng-click="$ctrl.increaseQuantity(item)"> +</span></button>
+            <div class="btn btn-default"  ng-hide="$ctrl.getCurrentQty(item) === 0"><span class="minus" ng-click="$ctrl.decreaseQuantity(item)">−</span><span>{{$ctrl.getCurrentQty(item)}}</span><span class="plus" ng-click="$ctrl.increaseQuantity(item)">+</span></div>
             <div ng-click="$ctrl.addToCart(item, 1)" ng-show="$ctrl.getCurrentQty(item) === 0">Add to Cart<i class="material-icons">local_grocery_store</i></div>
           </div>
         </div>
@@ -86,7 +86,7 @@
           <div class="price">
             <div bo-text="item.oldPrice"></div>
             <div bo-text="'$' + item.price"></div>
-            <button class="btn btn-default"  ng-hide="$ctrl.getCurrentQty(item) === 0"><span class="minus" ng-click="$ctrl.decreaseQuantity(item)">- </span><span>{{$ctrl.getCurrentQty(item)}}</span><span class="plus" ng-click="$ctrl.increaseQuantity(item)"> +</span></button>
+            <div class="btn btn-default"  ng-hide="$ctrl.getCurrentQty(item) === 0"><span class="minus" ng-click="$ctrl.decreaseQuantity(item)">−</span><span>{{$ctrl.getCurrentQty(item)}}</span><span class="plus" ng-click="$ctrl.increaseQuantity(item)">+</span></div>
             <div ng-click="$ctrl.addToCart(item, 1)" ng-show="$ctrl.getCurrentQty(item) === 0">Add to Cart<i class="material-icons">local_grocery_store</i></div>
           </div>
         </div>
