fix(checkout modal): improve UI

--- a/src/app/components/search/index.scss
+++ b/src/app/components/search/index.scss
@@ -43,6 +43,7 @@ ct-search {
       }
     }
     .time {
+      overflow: hidden;
       md-autocomplete {
         min-width: 155px!important;
       }
