--- a/src/app/pages/checkout/tpl.html
+++ b/src/app/pages/checkout/tpl.html
@@ -59,20 +59,32 @@
                 <h5>Franklin Street 143, B53, San Francisco, CA</h5><i class="material-icons">launch</i>
               </div>
             </div>
-            <div class="pan">
-              <div class="title">
-                <h4>Delivery Address</h4>
-                <i class="material-icons">control_point</i>
-              </div>
+          </div>
+          <div class="pan">
+            <div class="title">
+              <h4>Payment Method</h4>
+              <i class="material-icons" ng-click="$ctrl.showModal($event)">control_point</i>
+            </div>
+            <md-radio-group ng-model="$ctrl.paymentRadio">
               <div class="pan_item">
-                <div class="left">
-                  <div class="sub_title">Home Address 1</div>
-                </div>
-                <div class="title">
-                  <h5>Franklin Street 143, B53, San Francisco, CA</h5><i class="material-icons">launch</i>
-                </div>
+              <div class="left">
+                <!-- <div class="sub_title">Home Address 1</div> -->
+                <md-radio-button value="Apple" ng-disabled="true">VISA CARD</md-radio-button>
+              </div>
+              <div class="title">
+                <h5>XXXX-XXXX-XXXX-XXXX</h5><i class="material-icons">launch</i>
               </div>
             </div>
+            <div class="pan_item">
+              <div class="left">
+                <!-- <div class="sub_title">Home Address 1</div> -->
+                <md-radio-button value="Banana">CASH AT DELIVERY</md-radio-button>
+              </div>
+              <div class="title">
+                <h5><div class="price"><div class="new">$<span>69</span><span>.00</span></div></div></h5><i class="material-icons">launch</i>
+              </div>
+            </div>
+            </md-radio-group>
           </div>
         </div>
       </div>
