--- a/src/app/pages/checkout/index.scss
+++ b/src/app/pages/checkout/index.scss
@@ -37,7 +37,7 @@
             float: right;
             color: $green;
             margin-top: 5px;
-            &.none{
+            &.none {
               color: $blue;
             }
           }
@@ -56,10 +56,11 @@
               margin: 0 7px;
               color: $active;
               vertical-align: middle;
-              &.minus, &.plus{
+              &.minus,
+              &.plus {
                 font-size: 30px;
                 color: $themeColor;
-                &:hover{
+                &:hover {
                   color: $active;
                 }
               }
@@ -111,6 +112,32 @@
     }
     .delivery {
       margin-top: 20px;
+      .pan {
+        md-radio-button {
+          margin-bottom: 0;
+          margin-top: 10px;
+        }
+        .pan_item{
+          .title{
+            padding-left: 25px;
+          }
+        }
+        .price{
+          .new{
+            color: $active;
+            span:first-child{
+              color: $active;
+              font-size: 20px;
+              font-weight: 600;
+            }
+            span:last-child{
+              color: $active;
+              font-size: 14px;
+              vertical-align: top;
+            }
+          }
+        }
+      }
     }
     .right {
       padding-left: 20px;
@@ -179,7 +206,7 @@
             top: 14px;
             right: 10px;
           }
-          .alert{
+          .alert {
             color: $warningColor;
             padding: 7px 0;
           }
@@ -188,11 +215,13 @@
     }
   }
 }
+
 @media screen and (max-width: 960px) {
-  .checkout .body .right{
+  .checkout .body .right {
     padding-left: 0;
   }
 }
+
 .pan {
   background-color: #fff;
   padding: 5px;
