refactor(checkout): rename the components

--- a/src/app/pages/checkout/confirmation/tpl.html
+++ b/src/app/pages/checkout/confirmation/tpl.html
@@ -1,7 +1,7 @@
-<div class="orderplace page_wrap">
+<div class="confirmation page_wrap">
   <div>
   	<div class="title">
-  		<h4>ORDER PLACE</h4>
+  		<h4>ORDER PLACED</h4>
   	</div>
   	<div class="pan">
   		<div class="pan_body">
