--- a/src/app/pages/checkout/confirmation/index.scss
+++ b/src/app/pages/checkout/confirmation/index.scss
@@ -1,5 +1,5 @@
 @import '../../../variable.scss';
-.orderplace {
+.confirmation {
   justify-content: center;
   padding-top: 20px;
   min-height: calc(100vh - 270px);
