--- a/src/app/pages/results/filter/tpl.html
+++ b/src/app/pages/results/filter/tpl.html
@@ -6,17 +6,17 @@
       <div class="sub_title">
         <h5>TYPE:</h5></div>
       <div class="btn-group">
-        <div class="btn btn-default" bindonce ng-repeat="item in $ctrl.types track by item.id" bo-text="item.name" ng-class="{'active': item.active}"></div>
+        <div class="btn btn-default" bindonce ng-repeat="item in $ctrl.types track by item.id" bo-text="item.name" ng-class="{'active': item.active}" ng-click="$ctrl.selectFoodType($index)"></div>
       </div>
     </div>
     <div class="region">
       <div class="sub_title">
         <h5>REGION:</h5></div>
       <div class="regions">
-        <md-checkbox ng-model="$ctrl.regionAll" aria-label="Checkbox">All</md-checkbox>
+        <md-checkbox ng-model="$ctrl.regionAll" aria-label="Checkbox" ng-change="$ctrl.onRegionAllUpdated()">All</md-checkbox>
         <div class="region-group" layout="row" layout-wrap>
           <div class="item" bindonce ng-repeat="item in $ctrl.regions track by item.id" flex="50">
-            <md-checkbox ng-model="$ctrl.region[$index]" aria-label="Checkbox{{$index}}">{{item.name}}</md-checkbox>
+            <md-checkbox ng-model="$ctrl.regions[$index].active" aria-label="Checkbox{{$index}}" ng-change="$ctrl.onRegionUpdated()">{{item.name}}</md-checkbox>
           </div>
         </div>
       </div>
